# omlish

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .mini_readline_repl_history  .python-versions.json  .versions  AGENTS.md  BUG_FIXES.md  CODESTYLE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _setup.py  barf  barf.cc  barf.json  barf.py  docker-dev  dockerdev  imports.db  om  pyproject.toml  python  requirements-ci.txt  requirements-dev.txt  requirements-ext.txt  requirements-frz.txt  requirements-nn.txt  requirements.txt  sdist.py  setup.cfg  setup.py  tox.ini
.pip/omlish/: MANIFEST.in  pyproject.toml
.pkg/omcore/: omcore  pyproject.toml
.pkg/omdev/: pyproject.toml
.pkg/omdev-cext/: pyproject.toml  setup.py
.pkg/omdev-cli/: pyproject.toml
.pkg/omextra/: README.md  pyproject.toml
.pkg/ominfra/: README.md  ominfra  pyproject.toml
.pkg/omlish/: README.md  omlish  pyproject.toml
.pkg/omlish-cext/: pyproject.toml  setup.py
.pkg/omllm/: README.md  omllm  pyproject.toml
.pkg/ommlds/: .gitignore  README.md  ommlds  pyproject.toml
.pkg/ommlds-rs/: pyproject.toml  setup.py
.pkg/ommlx/: README.md  ommlx  pyproject.toml
.pkg/ommlx-cext/: pyproject.toml  setup.py
.pkg/omserv/: README.md  omserv  pyproject.toml
.pkg/omxtra/: pyproject.toml
.pkg/omxtra-cext/: README.md  omxtra  pyproject.toml  setup.py
_attic/: aiohttp_jwt.py  aiohttp_session.py  methods_old.py
_dc/: dataclasses.py  test_dataclasses.py
app/: dbs.py  main.py  secrets.py  shell.py  users.py  usersdb.py
dataplay/: git.py
docker/: .dockertimestamp  .timestamp  compose.yml  docker-compose.yml
dp/: utils.py
hn/: core.py  zigpy.py
infra/: conftest.py
nginx/: Makefile  NOTES
nn/: __init__.py  buffers.py  codegen.py  conftest.py  cstyle.py  device.py  devices.py  dims.py  dot.py  dtypes.py  eval.py  evaluators.py  evaluators2.py  execution.py  funcs.py  graph.py  helpers.py  jit.py  lazy.py  linear.py  mlops.py  nn.py  numpy.py  opencl.py  ops.py  ops2.py  optimizers.py  raw.py  realize.py  shapetracker.py  symbolic.py  tensor.py  tensors.py  uops.py
nn2/: device.py  devices.py  dot.py  dtypes.py  execution.py  funcs.py  gradcheck.py  graph.py  helpers.py  jit.py  lazy.py  mlops.py  ops.py  realize.py  tensor.py
omcore/: .om-manifests.json  .omlish-manifests.json  README.md  __about__.py  _check.cc  cached.py  datetimes.py  runmodule.py  shlex.py
omdev/: .manifests.json  .omlish-manifests.json  README.md  __about__.py  attrdocs.py  bracepy.py  classdot.py  cli.py  cmake.py  conftest.py  dataserver.py  dockertools.py  findimports.py  findmagic.py  git.py  imgur.py  interp.py  manifests.py  pip.py  revisions.py  secrets.py  tagstrings.py  tokens.py  wheelfile.py
omdev/pyproject/tests/skeleton/: .gitignore  Makefile  pyproject.toml  python  requirements-dev.txt
omdev/pyproject/tests/skeleton/omdevthing/: foo.py  main.py
omdev/pyproject/tests/skeleton/omdevthing/tests/: test_main.py
omextra/: .omlish-manifests.json  README.md  __about__.py  defs.py
ominfra/: .manifests.json  .omlish-manifests.json  NOTES.md  README.md  __about__.py  acme.py  cmds.py  configs.py  conftest.py  pyremote.py  secrets.py  ssh.py  systemd.py  threadworker.py  threadworkers.py
omlish/: .manifests.json  .omlish-manifests.json  .pkgdata  CODESTYLE.md  README.md  __about__.py  __init__.py  _check.cc  _math.pyx  _version.py  argparse.py  bootstrap.py  c3.py  cached.py  check.py  coerce.py  collections.py  concurrent.py  conftest.py  contextual.py  dataclasses.py  datetimes.py  defs.py  dispatch.py  docker.py  dynamic.py  fnpairs.py  fnpipes.py  genmachine.py  inject.py  io.py  iterables.py  iterators.py  json.py  lang.py  libc.py  marshal.py  matchfns.py  math.py  maybe.py  (+15 more)
omllm/: .om-manifests.json  README.md  __about__.py
omml/: __about__.py
ommlds/: .manifests.json  .omlish-manifests.json  ETHOS.md  README.md  __about__.py  huggingface.py
ommlds/nanochat/rustbpe/: Cargo.toml  README.md
ommlds/nanochat/rustbpe/src/: lib.rs
ommlx/: .manifests.json  README.md  __about__.py  conftest.py  git.py  huggingface.py  ocr.py  tinygrad.py
omserv/: .manifests.json  .omlish-manifests.json  README.md  __about__.py  conftest.py  dbs.py  passwords.py
omxtra/: .omlish-manifests.json  README.md  __about__.py  defs.py  dynamic.py
tg/: .gitignore  convert.py  dot.py  fixup.bash  ops.py  test_simple.py  update.bash
x/: .gitignore  .manifests.json  .om-manifests.json  README.md  _manifests.json  aboutdeps.py  acme.py  addrevision.py  afuts.py  agey.py  aish.py  amalg_resources_test.py  args.py  arrow.py  asaw.py  asdl.py  asserteval.py  asteval.py  astmarsh.py  async_.py  asynccrap.py  asyncio_dump.py  asynciochan.py  atom.sql  attrops.py  aws_stream_auth.py  barf.py  best_python.sh  best_python2.sh  bgserv.py  (+226 more)
x/c/: CMakeLists.txt  NOTES  TODO  _boilerplate.cc  _descriptor.cc  _dispatch.cc  build_ext.py  clangstuff.py  imports.py  junk.cc
x/c/_distutils/: __init__.py  _collections.py  _functools.py  _itertools.py  bcppcompiler.py  build_ext.py  ccompiler.py  config.py  core.py  cygwinccompiler.py  dir_util.py  dist.py  errors.py  extension.py  file_util.py  filelist.py  modified.py  msvccompiler.py  spawn.py  sysconfig.py  unixccompiler.py  util.py  version.py
x/c/_distutils/compilers/: _msvccompiler.py  bcppcompiler.py  ccompiler.py  cygwinccompiler.py  msvc9compiler.py  msvccompiler.py  options.py  unixccompiler.py  zosccompiler.py
x/c/ctypeslib/: clang2py.py
x/c/ctypeslib/codegen/: codegenerator.py  config.py  util.py
x/c/exts/: build.py
x/c/exts/_distutils/compilers/: unixccompiler.py
x/c/hancho/: hancho.py
x/c/tests/: build_ext.py  test_junk.py
x/rocksdb/: .gitignore  CMakeLists.txt  LICENSE  Makefile
x/rocksdb/src/pyrocksdb/: cache.cc  db.cc  filter_policy.cc  iterator.cc  merge_operator.cc  options.cc  pyrocksdb.cc  pyrocksdb.h  slice.cc  snapshot.cc  status.cc  transaction_db.cc  write_batch.cc
x/rocksdb/tests/: test_db.py
x/sql/tpch/: .pkgdata  CMakeLists.txt  _tpch.cc  ents.py  sql.py
x/sql/tpch/tests/: test_sql.py  test_tpch.py
(+11642 files in other folders)
