[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'


##

[project]
name = 'omlish'
authors = [{name = 'wrmsr'}]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'

dynamic = ['version']

description = 'omlish'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',

    'Operating System :: OS Independent',
    # 'Operating System :: POSIX',
]

[project.optional-dependencies]
async = ['anyio']
trio = [
    'trio',
    'trio-asyncio',
]
http = ['httpx']
sql = ['sqlalchemy']
wrapt = ['wrapt']
yaml = ['pyyaml']

server = [
    'h11',
    'h2',
    'priority',
    'wsproto',
]

test=['pytest']


##

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 'omlish.__about__.__version__'}

[tool.setuptools.packages.find]
include = ['omlish', 'omlish.*']
exclude = ['*.tests', '*.tests.*']


##

[tool.omlish.pyproject.srcs]
main = ['omlish', 'omdev', 'ominfra', 'omserv']
ml = ['@main', 'omml']
all = ['@ml', 'x']

[tool.omlish.pyproject.venvs]
all = { interp = '@12', requires = 'requirements-dev.txt', srcs = ['@main'] }
default = { requires = 'requirements-ext.txt' }
'13' = { interp = '@13' }
'13t' = { interp = '@13t' }
'8' = { interp = '@8', requires = [], srcs = [] }
docker = { docker = 'omlish-dev' }
docker-amd64 = { docker = 'omlish-dev-amd64' }
deploy = { interp = 'python3.12', requires = 'requirements.txt' }
debug = { interp = '@12-debug' }


##

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
# verbosity = 1

check_untyped_defs = true

enable_incomplete_feature = [
    'NewGenericSyntax',
]

exclude = [
    'omlish/dataclasses/tests/cpython/',
]


##

[tool.pytest.ini_options]
addopts = [
    '-v',
    '--tb=short',
    '--showlocals',
    '--strict-markers',
    '--durations=5',
    '--durations-min=2',
    # '--log=info',
]
asyncio_mode = 'strict'
junit_family = 'xunit2'
junit_duration_report = 'call'
timeout = 60
session_timeout = 600


##

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = [
    'omlish/dataclasses/tests/cpython/*',
]

select = ['ALL']

ignore = [

    'ANN001',  # missing-type-function-argument
    'ANN002',  # missing-type-args
    'ANN003',  # missing-type-kwargs
    'ANN201',  # missing-return-type-undocumented-public-function
    'ANN202',  # missing-return-type-private-function
    'ANN204',  # missing-return-type-special-method
    'ANN401',  # dynamically typed expressions (typing.Any) are disallowed in `*args`
    'ARG001',  # unused function argument,
    'ARG002',  # unused method argument
    'B008',  # do not perform function call in argument defaults
    'B009',  # do not call `getattr` with a constant attribute value
    'B010',  # set-attr-with-constant
    'B028',  # no explicit `stacklevel` keyword argument found
    'B905',  # `zip()` without an explicit `strict=` parameter'
    'C408',  # unnecessary `dict` call (rewrite as a literal)
    'C901',  # function is too complex
    'D',  # docstrings
    'E731',  # do not assign a `lambda` expression, use a `def`
    'E741',  # ambiguous variable name
    'E742',  # ambiguous class name
    'EM101',  # exception must not use a string literal, assign to variable first
    'EM102',  # exception must not use an f-string literal, assign to variable first
    'ERA001',  # found commented-out code
    'F541',  # f-string without any placeholders
    'FBT001',  # boolean-typed positional argument in function definition
    'FBT002',  # boolean default positional argument in function definition
    'FBT003',  # boolean positional value in function call
    'FIX',
    'FLY002',  # static-join-to-f-string
    'N804',  # first argument of a class method should be named `cls`
    'PERF401',  # use a list comprehension to create a transformed list
    'PGH003',  # use specific rule codes when ignoring type issues
    'PGH004',  # use specific rule codes when using `noqa`
    'PLC0208',  # iteration-over-set
    'PLR0911',  # too many return statements
    'PLR0912',  # too many branches
    'PLR0913',  # too many arguments in function definition
    'PLR0915',  # too many statements
    'PLR2004',  # magic value used in comparison
    'PLR2044',  # line with empty comment
    'PLW0603',  # using the global statement is discouraged
    'PLW2901',  # `for` loop variable overwritten by assignment target
    'PT004',  # fixture does not return anything, add leading underscore
    'PT016',  # pytest-fail-without-message
    'PT018',  # assertion should be broken down into multiple parts
    'PTH',  # pathlib
    'Q003',  # change outer quotes to avoid escaping inner quotes
    'RET504',  # unnecessary assignment before `return` statement
    'RET505',  # unnecessary `else` after `return` statement
    'RET506',  # unnecessary `elif` after `raise` statement
    'RET508',  # unnecessary `elif` after `break` statement
    'RUF009',  # do not perform function call `col.TypeMap` in dataclass defaults
    'RUF100',  # unused blanket `noqa` directive
    'S102',  # use of `exec` detected
    'S311',  # standard pseudo-random generators are not suitable for cryptographic purposes
    'S603',  # `subprocess` call: check for execution of untrusted input
    'S604',  # call-with-shell-equals-true
    'S606',  # starting a process without a shell
    'S607',  # starting a process with a partial executable path
    'SIM102',  # use a single `if` statement instead of nested `if` statements
    'SIM103',  # return the negated condition directly
    'SIM108',  # use ternary operator
    'SIM114',  # combine `if` branches using logical `or` operator
    'SIM117',  # combine `with` statements
    'T201',  # `print` found
    'T203',  # `pprint` found
    'TCH001',  # typing-only-first-party-import
    'TD001', # invalid TODO tag
    'TD002',  # missing author in TODO
    'TD003',  # missing issue link on the line following this TODO
    'TD004',  # missing colon in TODO
    'TD005',  # missing issue description after `TODO`
    'TID252',  # prefer absolute imports over relative imports from parent modules
    'TRY002',  # create your own exception
    'TRY003',  # avoid specifying long messages outside the exception class
    'TRY300',  # try-consider-else
    'UP038',  # use `X | Y` in `isinstance` call instead of `(X, Y)`

    # FIXME: mypy error: PEP 695 type aliases are not yet supported
    'UP040',  # type alias uses `TypeAlias` annotation instead of the `type` keyword

]

[tool.ruff.lint.per-file-ignores]
'**/__init__.py' = [
    'F401',  # imported but unused
]
'**/tests/*' = [
    'B011',  # do not `assert False
    'S101',  # use of `assert` detected
]
'**/scripts/*' = [
    'UP',
]
'omlish/testing/*' = [
    'S101',  # use of `assert` detected
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

# [tool.ruff.format]
# quote-style = 'single'
# indent-style = 'space'


##

[tool.flake8]
max-line-length = 120

show-source = true
statistics = true

exclude = [
    '.cache',
    '.git',
    '.idea',
    '.venv',
    'omlish/dataclasses/tests/cpython/',
]

ignore = [
    'E231',
    'E265',
    'E701',
    'E704',
    'E711',
    'E712',
    'E721',
    'E731',
    'E741',
    'E742',
    'F541',
    'F821',
    'F999',
    'W503',
    'W504',
]
