[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'


##

[project]
name = 'omlish'
authors = [{name = 'wrmsr'}]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'

dynamic = ['version']

description = 'omlish'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',

    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]

[project.optional-dependencies]
async = [
    'anyio',
    'sniffio',

    'greenlet; python_version < "3.13"',

    'trio',
    'trio-asyncio; python_version < "3.13"',
]

compression=[
    'lz4',
    'python-snappy; python_version < "3.13"',
    'zstd',
]

formats = [
    'orjson',
    'cloudpickle',
    'pyyaml',
]

http = [
    'httpx[http2]',
]

misc = [
    'jinja2',
    'psutil',
    'wrapt',
]

server = [
    'h11',
    'h2',
    'priority',
    'wsproto',
]

sql = [
    'sqlalchemy; python_version >= "3.13"',
    'sqlalchemy[asyncio]; python_version < "3.13"',

    'pg8000',
    'pymysql',

    'aiomysql',
    'aiosqlite',
    'asyncpg; python_version < "3.13"',
]

testing = [
    'pytest',
]


##

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 'omlish.__about__.__version__'}

[tool.setuptools.packages.find]
include = ['omlish', 'omlish.*']
exclude = ['*.tests', '*.tests.*']


##

[tool.omlish.pyproject.srcs]
main = [
    'omlish',
    'omdev',
    'ominfra',
    'omserv',
    'app',
]

ml = [
    '@main',
    'omml',
]

all = [
    '@ml',
    'x',
]

[tool.omlish.pyproject.venvs._default]
interp = '@12'
requires = ['-rrequirements-dev.txt']
srcs = ['@main']

[tool.omlish.pyproject.venvs.default]
inherits = ['_default']
requires = ['-rrequirements-ext.txt']

[tool.omlish.pyproject.venvs.'13']
inherits = ['_default']
interp = '@13'

[tool.omlish.pyproject.venvs.'13t']
inherits = ['_default']
interp = '@13t'

[tool.omlish.pyproject.venvs._old]
requires = []
srcs = []

[tool.omlish.pyproject.venvs.'11']
inherits = ['_old']
interp = '@11'

[tool.omlish.pyproject.venvs.'10']
inherits = ['_old']
interp = '@10'

[tool.omlish.pyproject.venvs.'9']
inherits = ['_old']
interp = '@9'

[tool.omlish.pyproject.venvs.'8']
inherits = ['_old']
interp = '@8'

[tool.omlish.pyproject.venvs.docker]
inherits = ['_default']
docker = 'omlish-dev'

[tool.omlish.pyproject.venvs.docker-amd64]
inherits = ['_default']
docker = 'omlish-dev-amd64'

[tool.omlish.pyproject.venvs.deploy]
interp = '3.12'
requires = ['-rrequirements.txt']


##

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
# verbosity = 1

check_untyped_defs = true

enable_incomplete_feature = [
    'NewGenericSyntax',
]

exclude = [
    'omlish/dataclasses/tests/cpython/',
]


##

[tool.pytest.ini_options]
addopts = [
    '-v',
    '--tb=short',
    # '--showlocals',
    '--strict-markers',
    '--durations=5',
    '--durations-min=2',
    # '--log=info',
]
asyncio_mode = 'strict'
junit_family = 'xunit2'
junit_duration_report = 'call'
timeout = 60
session_timeout = 600


##

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = [
    'omlish/dataclasses/tests/cpython/*',
]

select = ['ALL']

ignore = [

    'ARG005',  # unused-lambda-argument
    'ANN001',  # missing-type-function-argument
    'ANN002',  # missing-type-args
    'ANN003',  # missing-type-kwargs
    'ANN201',  # missing-return-type-undocumented-public-function
    'ANN202',  # missing-return-type-private-function
    'ANN204',  # missing-return-type-special-method
    'ANN205',  # missing-return-type-static-method
    'ANN206',  # missing-return-type-class-method
    'ANN401',  # any-type
    'ARG001',  # unused-function-argument
    'ARG002',  # unused-method-argument
    'ASYNC115',  # async-zero-sleep (bugged)
    'B008',  # function-call-in-default-argument
    'B009',  # get-attr-with-constant
    'B010',  # set-attr-with-constant
    'B028',  # no-explicit-stacklevel
    'B905',  # zip-without-explicit-strict
    'C408',  # unnecessary-collection-call
    'C901',  # complex-structure
    'D',  # docstrings
    'E731',  # lambda-assignment
    'E741',  # ambiguous-variable-name
    'E742',  # ambiguous-class-name
    'EM101',  # raw-string-in-exception
    'EM102',  # f-string-in-exception
    'ERA001',  # commented-out-code
    'F541',  # f-string-missing-placeholders
    'FBT001',  # boolean-type-hint-positional-argument
    'FBT002',  # boolean-default-value-positional-argument
    'FBT003',  # boolean-positional-value-in-call
    'FIX',  # fixmes
    'FLY002',  # static-join-to-f-string
    'N804',  # invalid-first-argument-name-for-class-method
    'PERF401',  # manual-list-comprehension
    'PGH003',  # blanket-type-ignore
    'PGH004',  # blanket-noqa
    'PLC0208',  # iteration-over-set
    'PLR0911',  # too-many-return-statements
    'PLR0912',  # too-many-branches
    'PLR0913',  # too-many-arguments
    'PLR0915',  # too-many-statements
    'PLR2004',  # magic-value-comparison
    'PLR2044',  # empty-comment
    'PLW0603',  # global-statement
    'PLW2901',  # redefined-loop-name
    'PT004',  # pytest-missing-fixture-name-underscore
    'PT016',  # pytest-fail-without-message
    'PT018',  # pytest-composite-assertion
    'PTH',  # pathlib
    'Q003',  # avoidable-escaped-quote
    'RET504',  # unnecessary-assign
    'RET505',  # superfluous-else-return
    'RET506',  # superfluous-else-raise
    'RET508',  # superfluous-else-break
    'RUF009',  # function-call-in-dataclass-default-argument
    'RUF018',  # assignment-in-assert
    'RUF100',  # unused-noqa
    'S102',  # exec-builtin
    'S311',  # suspicious-non-cryptographic-random-usage
    'S603',  # subprocess-without-shell-equals-true
    'S604',  # call-with-shell-equals-true
    'S606',  # start-process-with-no-shell
    'S607',  # start-process-with-partial-path
    'SIM102',  # collapsible-if
    'SIM103',  # needless-bool
    'SIM105',  # suppressible-exception
    'SIM108',  # if-else-block-instead-of-if-exp
    'SIM114',  # if-with-same-arms
    'SIM117',  # multiple-with-statements
    'T201',  # print
    'T203',  # p-print
    'TCH001',  # typing-only-first-party-import
    'TD001', # invalid-todo-tag
    'TD002',  # Missing author in TODO
    'TD003',  # Missing issue link on the line following this TODO
    'TD004',  # Missing colon in TODO
    'TD005',  # Missing issue description after `TODO`
    'TID252',  # Prefer absolute imports over relative imports from parent modules
    'TRY002',  # Create your own exception
    'TRY003',  # Avoid specifying long messages outside the exception class
    'TRY300',  # try-consider-else
    'UP038',  # Use `X | Y` in `isinstance` call instead of `(X, Y)`

    # FIXME: mypy error: PEP 695 type aliases are not yet supported
    'UP040',  # type alias uses `TypeAlias` annotation instead of the `type` keyword

]

[tool.ruff.lint.per-file-ignores]
'**/__init__.py' = [
    'F401',  # imported but unused
]
'**/tests/*' = [
    'B011',  # do not `assert False
    'S101',  # use of `assert` detected
]
'**/scripts/*' = [
    'UP',
]
'omlish/testing/*' = [
    'S101',  # use of `assert` detected
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

# [tool.ruff.format]
# quote-style = 'single'
# indent-style = 'space'


##

[tool.flake8]
max-line-length = 120

show-source = true
statistics = true

exclude = [
    '.cache',
    '.git',
    '.idea',
    '.venv',
    'omlish/dataclasses/tests/cpython/',
]

ignore = [
    'E231',
    'E265',
    'E701',
    'E704',
    'E711',
    'E712',
    'E721',
    'E731',
    'E741',
    'E742',
    'F541',
    'F821',
    'F999',
    'W503',
    'W504',
]
