[metadata]
description-file = README.md

[flake8]
max-line-length = 120

show-source = True
statistics = True

exclude =
    .cache,
    .git,
    .idea,
    .venv,

extend-ignore =
    E231,
    E265,
    E701,
    E704,
    E711,
    E712,
    E721,
    E731,
    E741,
    E742,
    F541,
    F821,
    F999,
    W503,
    W504,
