[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omcore'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/om'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.29'
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'omcore'

[project.optional-dependencies]
all = [
    'anyio ~= 4.14',
    'sniffio ~= 1.3',
    'trio ~= 0.33',
    'trio-asyncio ~= 0.15',
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'brotli ~= 1.2',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.2',
    'memray ~= 1.19',
    'orjson ~= 3.11',
    'ujson ~= 5.13',
    'pyyaml ~= 6.0',
    'cbor2 ~= 6.1',
    'cloudpickle ~= 3.1',
    'httpx[http2] ~= 0.28',
    'cryptography ~= 49.0',
    'sqlalchemy[asyncio] ~= 2.0',
    'pg8000 ~= 1.31',
    'psycopg2 ~= 2.9',
    'psycopg ~= 3.3',
    'pymysql ~= 1.2',
    'mysql-connector-python ~= 9.7',
    'mysqlclient ~= 2.2',
    'snowflake-connector-python ~= 4.6',
    'aiomysql ~= 0.3',
    'aiosqlite ~= 0.22',
    'asyncpg ~= 0.31',
    'apsw ~= 3.53',
    'sqlean.py ~= 3.50',
    'duckdb ~= 1.5',
    'markupsafe ~= 3.0',
    'jinja2 ~= 3.1',
    'pytest ~= 9.1',
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.11',
    'pyyaml ~= 6.0',
]
async = [
    'anyio ~= 4.14',
    'sniffio ~= 1.3',
    'trio ~= 0.33',
    'trio-asyncio ~= 0.15',
]
compress = [
    'lz4 ~= 4.4',
    'python-snappy ~= 0.7',
    'brotli ~= 1.2',
]
diag = [
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'psutil ~= 7.2',
    'memray ~= 1.19',
]
formats = [
    'orjson ~= 3.11',
    'ujson ~= 5.13',
    'pyyaml ~= 6.0',
    'cbor2 ~= 6.1',
    'cloudpickle ~= 3.1',
]
http = [
    'httpx[http2] ~= 0.28',
]
secrets = [
    'cryptography ~= 49.0',
]
sqlalchemy = [
    'sqlalchemy[asyncio] ~= 2.0',
]
sqldrivers = [
    'pg8000 ~= 1.31',
    'psycopg2 ~= 2.9',
    'psycopg ~= 3.3',
    'pymysql ~= 1.2',
    'mysql-connector-python ~= 9.7',
    'mysqlclient ~= 2.2',
    'snowflake-connector-python ~= 4.6',
    'aiomysql ~= 0.3',
    'aiosqlite ~= 0.22',
    'asyncpg ~= 0.31',
    'apsw ~= 3.53',
    'sqlean.py ~= 3.50',
    'duckdb ~= 1.5',
]
templates = [
    'markupsafe ~= 3.0',
    'jinja2 ~= 3.1',
]
testing = [
    'pytest ~= 9.1',
]
plus = [
    'asttokens ~= 3.0',
    'executing ~= 2.2',
    'orjson ~= 3.11',
    'pyyaml ~= 6.0',
]

[project.entry-points]
'omcore.manifests' = {omcore = 'omcore'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omcore',
    'omcore.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.om-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
'omcore.cexts' = [
    'include/omcore/*',
]
'omcore.http.resources' = [
    '*',
]
'omcore.specs.jsonschema' = [
    'schemas/*',
    'schemas/draft202012/*',
    'schemas/draft202012/vocabularies/*',
]
'omcore.text.abnf' = [
    'docs/*',
]
