[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omdev'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = {text = 'BSD-3-Clause'}
requires-python = '>=3.12'
version = '0.0.0.dev329'
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
]
description = 'omdev'
dependencies = [
    'omlish == 0.0.0.dev329',
]

[project.optional-dependencies]
all = [
    'black ~= 25.1',
    'pycparser ~= 2.22',
    'pcpp ~= 1.30',
    'docutils ~= 0.21',
    'markdown-it-py ~= 3.0',
    'mdit-py-plugins ~= 0.4',
    'pygments ~= 2.19',
    'mypy ~= 1.16',
    'gprof2dot ~= 2025.4',
    'prompt-toolkit ~= 3.0',
    'segno ~= 1.6',
]
black = [
    'black ~= 25.1',
]
c = [
    'pycparser ~= 2.22',
    'pcpp ~= 1.30',
]
doc = [
    'docutils ~= 0.21',
    'markdown-it-py ~= 3.0',
    'mdit-py-plugins ~= 0.4',
    'pygments ~= 2.19',
]
mypy = [
    'mypy ~= 1.16',
]
prof = [
    'gprof2dot ~= 2025.4',
]
ptk = [
    'prompt-toolkit ~= 3.0',
]
qr = [
    'segno ~= 1.6',
]

[project.entry-points]
'omlish.manifests' = {omdev = 'omdev'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omdev',
    'omdev.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '.manifests.json',
    'LICENSE',
    'LICENSE.txt',
    'cc/cdeps.toml',
    'pyproject/resources/*.sh',
]
