[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omdev'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.0.26'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
description = 'omdev'
dependencies = [
    'omlish == 0.0.26',
]

[project.optional-dependencies]
all = [
    'ominfra == 0.0.26',
    'ommlds == 0.0.26',
    'black ~= 26.5',
    'pycparser ~= 3.0',
    'pcpp ~= 1.30',
    'docutils ~= 0.23',
    'markdown-it-py ~= 4.2',
    'mdit-py-plugins ~= 0.6',
    'pygments ~= 2.20',
    'mypy ~= 2.2',
    'gprof2dot ~= 2025.4',
    'segno ~= 1.6',
    'rich ~= 15.0',
    'textual ~= 8.2',
    'textual-dev ~= 1.8',
    'textual-speedups ~= 0.2',
]
ominfra = [
    'ominfra == 0.0.26',
]
ommlds = [
    'ommlds == 0.0.26',
]
black = [
    'black ~= 26.5',
]
c = [
    'pycparser ~= 3.0',
    'pcpp ~= 1.30',
]
doc = [
    'docutils ~= 0.23',
    'markdown-it-py ~= 4.2',
    'mdit-py-plugins ~= 0.6',
    'pygments ~= 2.20',
]
mypy = [
    'mypy ~= 2.2',
]
prof = [
    'gprof2dot ~= 2025.4',
]
qr = [
    'segno ~= 1.6',
]
tui = [
    'rich ~= 15.0',
    'textual ~= 8.2',
    'textual-dev ~= 1.8',
    'textual-speedups ~= 0.2',
]

[project.entry-points]
'omlish.manifests' = {omdev = 'omdev'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omdev',
    'omdev.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.h',
    '*.hh',
    '*.abnf',
    '*.g4',
    '.omlish-manifests.json',
    'py.typed',
    '*.md',
    'README',
    'README.rst',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
]
'omdev.cc' = [
    'cdeps.toml',
]
'omdev.dockerdev' = [
    'config.toml',
    'resources/*',
    'resources/.*',
    'resources/configs/.*',
    'resources/depsets/*',
    'resources/fragments/*',
    'resources/scripts/*',
]
'omdev.pyproject' = [
    'resources/*',
]
'omdev.tools.jsonview' = [
    'resources/*',
]
'omdev.tui.apps.jtree' = [
    'styles/*.tcss',
]
'omdev.tui.textual.altdevtools.previews' = [
    '*.tcss',
]
