[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'omextra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev478'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'omextra'
dependencies = [
    'omlish == 0.0.0.dev478',
]

[project.optional-dependencies]

[project.entry-points]
'omlish.manifests' = {omextra = 'omextra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'omextra',
    'omextra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '*.hh',
    '.omlish-manifests.json',
    'LICENSE',
    'LICENSE.txt',
]
