[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'ominfra'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/omlish'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.0.0.dev496'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]
description = 'ominfra'
dependencies = [
    'omlish == 0.0.0.dev496',
]

[project.optional-dependencies]
all = [
    'omdev == 0.0.0.dev496',
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
]
omdev = [
    'omdev == 0.0.0.dev496',
]
ssh = [
    'paramiko ~= 4.0',
    'asyncssh ~= 2.22',
]

[project.entry-points]
'omlish.manifests' = {ominfra = 'ominfra'}

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'ominfra',
    'ominfra.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    '*.cc',
    '*.cu',
    '*.g4',
    '*.h',
    '*.hh',
    '.omlish-manifests.json',
    'README',
    'README.md',
    'LICENSE',
    'LICENSE.txt',
    'AUTHORS',
    'clouds/aws/instancetypes/cache.json.gz',
    'clouds/aws/models/services/*.toml',
    'manage/targets/bestpython.sh',
]
